fix: fix the chat window going out of bounds

--- a/frontend/src/components/chat.module.css
+++ b/frontend/src/components/chat.module.css
@@ -91,6 +91,7 @@
 	width: 75%;
 	height: 100%;
 	position: relative;
+	overflow: hidden;
 }
 
 .chat-list {
@@ -161,8 +162,10 @@
 }
 
 .message-list-container {
+	display: flex;
+	flex-direction: column;
 	height: 100%;
-	overflow: scroll;
+	overflow: auto;
 	overflow-x: hidden;
 }
 
@@ -221,7 +224,7 @@
 .message-other {
 	width: fit-content;
 	max-width: 50%;
-	min-width: 4.8rem;
+	min-width: 2.4rem;
 	margin: 1rem auto 1rem 1rem;
 	padding: 0.4rem 1.6rem;
 	border-radius: 0.8rem;
